使后台主页显示内容

--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -46,9 +46,10 @@
 	<div id="iframe_box" class="Hui-article">
 		<div class="show_iframe">
 			<div style="display:none" class="loading"></div>
-			<iframe scrolling="yes" frameborder="0" src=""></iframe>
+			<!--<iframe scrolling="yes" frameborder="0" src=""></iframe>-->
+			<iframe scrolling="yes" frameborder="0" src="{:url('index/welcome')}"></iframe>
 		</div>
 	</div>
 </section>
-<!--包含菜单文件-->
+<!--包含footer文件-->
 {include file="public/footer" /}
